<resources>
    <string name="app_name">Botanical Application</string>
    <string name="specifications">⛭ Specifications</string>
    <string name="growing">🌱 Growing</string>
    <string name="edible_part_s">Edible part(s):</string>
    <string name="flowers"> flowers</string>
    <string name="foliage"> foliage</string>
    <string name="fruits"> fruits</string>
    <string name="unknown"><font color ="colorSurfaceVariant"><u>Unknown</u></font></string>
    <string name="visible">Visible</string>
    <string name="invisible">Invisible</string>
    <string name="retry">Retry</string>
    <string name="action_apply">Apply</string>
    <string name="action_rest_all">Rest All</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="countries_filter_title">Sort and Filter</string>
    <string name="filter_sheet_label_sort_by">Sort by</string>
    <string name="filter_sheet_sort_ascending">Ascending</string>
    <string name="filter_sheet_sort_descending">Descending</string>
    <string name="ligneous_type">Ligneous type: %1$s</string>
    <string name="average_height">Average height: %1$s cm.</string>
    <string name="maximum_height">Maximum height: %1$s cm.</string>
    <string name="nitrogen_fixation">Nitrogen fixation: %1$s</string>
    <string name="shape_and_orientation">Shape and orientation: %1$s</string>
    <string name="toxicity">Toxicity: %1$s</string>

    <string name="tooltip_scientific_name">The scientific name follows the Binomial nomenclature, and represents its genus and its species within the genus, resulting in a single worldwide name for each organism.</string>
    <string name="tooltip_common_name">The usual common name, in english, of the species (if any).</string>
    <string name="tooltip_first_publish">The first publication author(s) and year of a valid name of this species. </string>
    <string name="tooltip_observations">Some habit observations on the species</string>
    <string name="tooltip_edible_part">The plant edible part(s), if any.</string>
    <string name="tooltip_specifications">Species is main characteristics</string>

    <string name="example_scientific_name">Cocos nucifera</string>
    <string name="example_common_name">Coconut</string>
    <string name="example_first_publish">L. 1753 - Sp. Pl.: 1188 (1753)</string>
    <string name="example_observations">C. Malesia to SW. Pacific</string>
    <string name="example_edible_part_s">roots, stem, fruits, seeds</string>

    <string name="edible_part_s_title">Edible part(s)</string>
    <string name="tab_title_specifications">Specifications</string>
    <string name="tab_title_growth">Growth</string>
    <string name="tab_title_images">Images</string>
    <string name="title_images">Images</string>
    <string name="title_flower">Flower</string>
    <string name="title_fruit">Fruit</string>
    <string name="title_habit">Habit</string>
    <string name="title_leaf">Leaf</string>
    <string name="title_bark">Bark</string>
    <string name="title_other">Other</string>
    <string name="no_data_view">There is no data to display</string>
    <string name="sort_order_year">Year</string>
    <string name="sort_order_name">Name</string>
    <string name="sort_order_rank">Rank</string>
    <string name="filter_by">Filter by</string>
    <string name="status_accepted">Status accepted</string>
    <string name="title_images_not_null">Title Images not null</string>
</resources>