<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayoutPlantSpecifications"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|top"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".fragments.plant_detail.specifications.PlantSpecificationsFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewFlowers"
        style="@style/Widget.MaterialComponents.TextView.Body_1.Drawable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/icons_flower"
        android:text="@string/unknown" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewFoliage"
        style="@style/Widget.MaterialComponents.TextView.Body_1.Drawable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:drawableStart="@drawable/icons_foliage"
        android:text=" Unknown, Coarse, Green foliage" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewFruits"
        style="@style/Widget.MaterialComponents.TextView.Body_1.Drawable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/icons_fruit"
        android:text=" Visible, Brown,Green fruits" />

    <View
        android:id="@+id/dividerLinear2"
        style="@style/Divider"
        android:layout_marginVertical="8dp" />

    <TextView
        android:id="@+id/textViewEdiblePartsTitle"
        style="@style/Widget.MaterialComponents.TextView.H2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edible_part_s_title" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupEdibleParts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/textViewNotEdibleParts"
        style="@style/Widget.MaterialComponents.TextView.H3.Error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unknown"
        android:visibility="gone" />

    <View
        android:id="@+id/dividerLinear3"
        style="@style/Divider"
        android:layout_marginVertical="8dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textLigneousType"
        style="@style/Widget.MaterialComponents.TextView.Body_1.Drawable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ligneous_type" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textAverageHeight"
        style="@style/Widget.MaterialComponents.TextView.Body_1.Drawable"
        android:layout_marginVertical="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/average_height" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textMaximumHeight"
        style="@style/Widget.MaterialComponents.TextView.Body_1.Drawable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/maximum_height" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textNitrogenFixation"
        style="@style/Widget.MaterialComponents.TextView.Body_1.Drawable"
        android:layout_marginVertical="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nitrogen_fixation" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textShapeAndOrientation"
        style="@style/Widget.MaterialComponents.TextView.Body_1.Drawable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shape_and_orientation" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textToxicity"
        style="@style/Widget.MaterialComponents.TextView.Body_1.Drawable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:text="@string/toxicity" />

</LinearLayout>