<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="filterViewModel"
            type="com.ponyu.botanical.fragments.filter.FilterViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/layoutFilterBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottomSheet"
            style="@style/Widget.Material3.BottomSheet.Modal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="24dp"
            android:paddingBottom="16dp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <com.google.android.material.bottomsheet.BottomSheetDragHandleView
                android:id="@+id/dragHandle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lblTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/countries_filter_title"
                android:textAppearance="?textAppearanceTitleLarge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dragHandle"
                style="@style/Widget.MaterialComponents.TextView.H3"/>

            <TextView
                android:id="@+id/lblSortBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/filter_sheet_label_sort_by"
                android:textAppearance="?textAppearanceLabelLarge"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lblTitle" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/cg_sort_types"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    app:selectionRequired="true"
                    app:singleSelection="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lblSortBy">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipSortAscending"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/filter_sheet_sort_ascending" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipSortDescending"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/filter_sheet_sort_descending" />

                </com.google.android.material.chip.ChipGroup>

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/cg_sort_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    app:selectionRequired="true"
                    app:singleSelection="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cg_sort_types">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipOrderYear"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sort_order_year" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipOrderName"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sort_order_name" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipOrderRank"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sort_order_rank" />

                </com.google.android.material.chip.ChipGroup>

            <View
                android:id="@+id/dividerLinear1"
                style="@style/Divider"
                android:layout_marginVertical="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cg_sort_order" />

            <TextView
                android:id="@+id/lblFilterBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/filter_by"
                android:textAppearance="?textAppearanceLabelLarge"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dividerLinear1" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cg_sort_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:selectionRequired="true"
                app:singleSelection="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lblFilterBy">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipFilterAccepted"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status_accepted" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipFilterTitleImages"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_images_not_null" />

            </com.google.android.material.chip.ChipGroup>

            <View
                android:id="@+id/dividerLinear2"
                style="@style/Divider"
                android:layout_marginVertical="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cg_sort_by" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnApply"
                style="@style/Widget.Material3.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:onClick="@{ () -> filterViewModel.applyFilters() }"
                android:text="@string/action_apply"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/frameLayout"
                app:layout_constraintTop_toBottomOf="@id/dividerLinear2" />

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                app:layout_constraintEnd_toStartOf="@id/btnApply"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/btnApply">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnResetAll"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{ () -> filterViewModel.resetFilters() }"
                    android:text="@string/action_rest_all" />

            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>